<resources>
    <string name="app_name">Coronavirus-Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_country">Country</string>
    <string name="info_title">COVID-19 Global Information</string>
    <string name="info_total">Total Confirmed</string>
    <string name="info_recover">Total Recovered</string>
    <string name="info_death">Total Deaths</string>
    <string name="info_totalcasesincountry">Total Cases</string>
    <string name="info_todaycases">Today Cases</string>
    <string name="info_todaydeath">Today Deaths</string>
    <string name="info_todayrecover">Today Recovered</string>
    <string name="info_active">Total Active</string>
    <string name="info_critical">Total Critical</string>
    <string name="search">Search</string>
    <string name="sort_alpha">Alphabet</string>
    <string name="sort_totalcases">Total Cases</string>
</resources>