<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="#fff"
            android:textSize="24sp"
            android:text="@string/info_title"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"
            android:textStyle="bold" />

        <TextView
        android:id="@+id/tvLabelTotalConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        style="@style/LabelFontStyle"
        android:text="@string/info_total" />

        <TextView
            android:id="@+id/tvTotalConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTotalConfirmed"
            style="@style/TotalFontStyle"
            tools:text="0" />

        <TextView
            android:id="@+id/tvLabelTotalDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTotalDeaths"
            style="@style/LabelFontStyle"
            android:text="@string/info_death" />

        <TextView
            android:id="@+id/tvTotalDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTotalDeaths"
            style="@style/TotalFontStyle"
            tools:text="0" />

        <TextView
            android:id="@+id/tvLabelTotalRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTotalRecovered"
            style="@style/LabelFontStyle"
            android:text="@string/info_recover" />

        <TextView
            android:id="@+id/tvTotalRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTotalRecovered"
            style="@style/TotalFontStyle"
            tools:text="0" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular_home"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>